[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspa"
version = "2.0.1"
description = "Kaspa Python SDK"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "ISC"
authors = [
    { name = "Kaspa developers" }
]
keywords = ["kaspa", "cryptocurrency", "blockchain", "blockdag", "sdk", "wallet", "rpc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kaspanet/kaspa-python-sdk"
Repository = "https://github.com/kaspanet/kaspa-python-sdk"
Documentation = "https://kaspanet.github.io/kaspa-python-sdk/latest"
Changelog = "https://kaspanet.github.io/kaspa-python-sdk/latest/CHANGELOG/"
Issues = "https://github.com/kaspanet/kaspa-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
docs = [
    "click==8.2.1", # click==8.3.1 breaks live reload of mkdocs
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mike>=2.1",
]

[tool.maturin]
python-source = "python"
bindings = "pyo3"
include = [
    "LICENSE",
    "docs/CHANGELOG.md",
    # The kaspa.experimental.silverscript extension is built separately (it links
    # a different rusty-kaspa revision) and injected into
    # python/kaspa/experimental/silverscript/ by
    # ci/build-and-inject-silverscript.sh. It matches the global `*.so` rule in
    # .gitignore, which maturin's python-source walk would otherwise honor and
    # exclude from the wheel. Listing it here force-includes it (override wins
    # over .gitignore) at the python-source-mapped path
    # kaspa/experimental/silverscript/.
    # Keep it gitignored (it's a per-version build artifact, never committed).
    "python/kaspa/experimental/silverscript/silverscript*.so",
    "python/kaspa/experimental/silverscript/silverscript*.pyd",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
