[package]
name = "kaspa-silverscript"
version = "2.0.1"
edition = "2024"

[lib]
# Compiled to `kaspa/silverscript/silverscript.<abi>.so` and re-exported by
# `kaspa/silverscript/__init__.py` as `from .silverscript import *`.
name = "silverscript"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub-gen"
path = "src/bin/stub_gen.rs"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.1" }
pyo3-stub-gen = "0.17.2"
silverscript-lang = { git = "https://github.com/kaspanet/silverscript.git", rev = "faaa074915edd1e885e4dd552051e348d1854c87" }
